# dynamic_paper

./: .clang-tidy  .gitignore  CMakeLists.txt  README.org  build.sh  configure
files/: background_sets.yaml  background_sets_old.yaml  test.sh  test.yaml  test_background_sets.yaml
src/: CMakeLists.txt  background_set.cpp  background_set.hpp  background_set_enums.cpp  background_set_enums.hpp  background_set_method.hpp  background_set_method_enums.hpp  background_setter.cpp  background_setter.hpp  background_setter_definition.hpp  background_setter_macos.cpp  cmdline_helper.cpp  cmdline_helper.hpp  command_executor.cpp  command_executor.hpp  config.cpp  config.hpp  constants.hpp  defaults.hpp  dynamic_background_set.cpp  dynamic_background_set.hpp  file_util.cpp  file_util.hpp  format.hpp  globals.hpp  hook_script_executor.cpp  hook_script_executor.hpp  image_compositor.cpp  image_compositor.hpp  location.cpp  location.hpp  location_info.hpp  logger.cpp  logger.hpp  magick_compositor.cpp  magick_compositor.hpp  main.cpp  math_util.hpp  networking.cpp  networking.hpp  (+20 more)
src/benchmarking/: benchmarking.cpp
src/golang/: background.go  compile_go.sh  go.mod
src/nolint/: .clang-tidy  cimg_compositor.cpp  cimg_compositor.hpp
test/: CMakeLists.txt  background_set_test.cpp  background_test_setter.cpp  background_test_setter.hpp  cmdline_helper_tests.cpp  constants.hpp  current_time_test.cpp  dynamic_background_test.cpp  general_config_test.cpp  helper.cpp  helper.hpp  logging_config_parsing.cpp  static_background_test.cpp  test.cpp  time_conversion_test.cpp  time_from_midnight_test.cpp  yaml_parsing_test.cpp
